@@ -1,3 +1,8 @@
+Mon Oct 28 14:57:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* load.c (ruby_init_ext): share feature names between frame name and
+	  provided features.
+
 Mon Oct 28 14:41:27 2013  Akinori MUSHA  <knu@iDaemons.org>
 
 	* misc/ruby-electric.el: Import ruby-electric.el 2.1 from
